feat: added integration with telegram and grok
